--- a/1_Getting_Started_Loading,_Displaying,_Saving_and_Dimensions.ipynb
+++ b/1_Getting_Started_Loading,_Displaying,_Saving_and_Dimensions.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mirpouya/OpenCV-Tutorial/blob/main/1_Getting_Started_Loading%2C_Displaying%2C_Saving_and_Dimensions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mirpouya/OpenCV-Tutorial/blob/main/01. Getting_Started_Loading%2C_Displaying%2C_Saving_and_Dimensions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
